# apple-music-mcp

./: .gitignore  CLAUDE.md  generate_apple_music_token.py  pyproject.toml
.claude/skills/playlist/: SKILL.md
apple_music_mcp/: apple_music.py  cli.py  mcp_server.py  parser.py
tests/: test_apple_music.py  test_mcp_server.py
