[tool.poetry]
name = "apple-music-mcp"
version = "0.1.0"
description = "Apple Music MCP server and CLI — search catalog, manage playlists, and more"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apple_music_mcp"}]

[tool.poetry.dependencies]
python = "^3.13"
cryptography = "^43.0"
mcp = "*"
PyJWT = "^2.12"
python-dotenv = "^1.0"
requests = "^2.33"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "^8.0"
pytest-cov = "*"
pytest-mock = "^3.0"
ruff = "*"
types-requests = "^2.33.0.20260327"

[tool.poetry.scripts]
playlist-creator = "apple_music_mcp.cli:main"
apple-music-mcp = "apple_music_mcp.mcp_server:main"
generate-token = "generate_apple_music_token:main"
generate-token-save = "generate_token_save:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "C4", "SIM", "PTH", "PERF", "RUF",
    "N", "ANN", "S", "TCH", "PT", "ARG", "FBT", "PL",
]
ignore = [
    "B008",    # function calls in defaults (FastAPI/MCP pattern)
    "S101",    # assert — allowed in tests (see per-file-ignores)
    "PLC0414", # import alias does not rename — intentional re-exports
    "PLW0603", # global statement — used for module-level client cache
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "S106", "ARG", "FBT", "PLR2004", "PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=apple_music_mcp"

[tool.coverage.run]
source = ["apple_music_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 75
